# smart_document_organizer-main1

./: .env.example  .flake8  .gitignore  .kilocodeignore  .pre-commit-config.yaml  AGENTS.md  APPLICATION_COMPLETION_PLAN.md  Codex_Readme.md  LICENSE  Launch_DB_Monitor.py  README.md  Start.py  __init__.py  check_state.py  kilo_action_log.txt  kilo_log.txt  launch.py  openapi-e2e.json  organize_final_products.py  proposals_export.csv  pyproject.toml  requirements-core.txt  requirements-dev.txt  requirements.txt  reviewmeforfixes.txt  run_app.bat  run_app.ps1  startup-baseline.md  startup-issues.csv  stop_backend_wsl.ps1  system_overview_2026-02-16T16-19-05.851312.md  telemetry-id  test_import.py  test_runtime_imports.py  todo.db
.gemini/: gemini.md  settings.json
.grok/: grok.md
.kilocode/: kilocode.json
agent_resources/: PERSONA_SKILL_DIRECTORY_MAP.md
agents/: AGENTS_MAP.md  ARCHITECTURE_MAP.md  __init__.py  memory.py  production_agent_manager.py
archive/: ARCHITECTURAL_RECOMMENDATIONS_AND_PLAN.md  ARCHITECTURE_REVIEW.md  structural_recommendations.md
config/: __init__.py  configuration_manager.py  extraction_patterns.py  file_tagging_rules.json  integrity_rules.json  organization_rules.json  telemetry-id
core/: llm_providers.py  load_template.py  ml_optimization.py  refactor_tasks.json  refactor_tools.py  service_integration.py  temp_db_inspector.py  tracing.py  workflow.py
databases/: README.md  file_index.db  todo.db  unified_memory.db
diagnostics/: __init__.py  api_communication_log.py  backend_startup_log.py  bug_tracker.py  data_integrity.py  engine.py  gui_startup_log.py  import_analyzer.py  runtime_policy_guard.py  startup_report.py  startup_tracer.py
docs/: FILE_SCANNER_TASKLIST.md  WORKFLOW_V2_JOB_MONITORING_RUNBOOK.md
documents/: Adaptive Epistemic Document Intelligence System.docx  DOCUMENT_INDEX.md  HOLISTIC_REMEDIATION_TASK_LIST.md  MASTER_REMAINING_TASKS.md  MIGRATION_SAFE_CHECKLIST.md  TASKMASTER_ORGANIZATION_RUNBOOK.md  Workflow.txt  Workflow_Final_Output.txt
frontend/: index.html  package-lock.json  package.json
gui/: agent_manager.py  contradictions_tab.py  db_monitor.py  gui_dashboard.py  memory_analytics_tab.py  memory_review_tab.py  open_memory_review.py  professional_manager.py  utils.py  violations_tab.py
mem_db/: __init__.py  database.py
memory/: HISTORY.md  MEMORY.md
pipelines/: README.md  presets.py  runner.py
routes/: tags.py  (+22 more)
(+992 files in other folders)
